# sqlite-tamer

./: .gitignore  README.md  pyproject.toml  setup.cfg  sql_create.json  sql_default.json  tamer.py  test_attach.py  test_json.py  test_tamer.py
code/: tamer.py
test/: sql_create.json  sql_default.json  test_attach.py  test_json.py  test_tamer.py
