[metadata]
name = sqlite-tamer
version = 0.5.0
author = Weisz Roland
author_email = weisz.roland@pohlen-dach.hu
description = Module for performing most common tasks in SQLite
license = MIT
copyright = Copyright (c) 2018-2022 Weisz Roland
long-description = file:README.md
long-description-content-type = text/markdown
keywords = sqlite, database, tamer, simple
url = https://github.com/rolika/sqlite-tamer
classifiers =
    Programming Language :: Python :: 3.9
    Topic :: Database
    Operating_system :: OS Independent

[options]
package_dir = code
packages = find:
python_requires = >=3.9

[options.packages.find]
where = code